# CCIP-Server

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  ccip.py  config-sample.py  docker-compose.yml  docker-entrypoint.sh  error.py  import.py  nginx.conf  pyproject.toml  reg-sample.csv  requirements.txt  uwsgi.ini
app/: ccip.py  config-sample.py  delivery-permission-sample.json  import.py  puzzle-config-sample.json  reg-sample.csv  scenario-sample.json  staff-sample.csv  webhook.sh
app/models/: __init__.py  announcement.py  attendee.py  puzzle.py
models/: __init__.py  attendee.py
