[project]
name = "ccip-server"
version = "1.0.0"
description = ""
authors = ["OPass Dev Team <dev@opass.app>"]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "mongoengine>=0.29.1",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
